populated web page

--- a/index.html
+++ b/index.html
@@ -1,4 +1,23 @@
 <html>
-
-
+<head>
+    <title>Hello world</title>
+    <body>
+        <div class="box">
+           
+           <nav>
+               <ul>
+                   <li></li>
+                   <li></li>
+                   <li></li>
+                   <li></li>
+                   <li></li>
+               </ul>
+           </nav>
+            <h1>
+                <h3></h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nostrum harum doloribus ipsa consequuntur sapiente commodi cupiditate, perferendis molestiae ex nulla officiis necessitatibus, tenetur est sit mollitia aspernatur omnis voluptate velit ut cum ratione assumenda rerum saepe dolor. Ratione alias architecto magni accusantium ipsam, corporis, fugiat magnam nesciunt voluptate voluptatum eaque?</p>
+            </h1>
+        </div>
+    </body>
+</head>
 </html>
