--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Hello world</title>
     <body>
         <div class="box">
-           <img src="css/main.jpg" alt="cat or something">
+           <img src="/css/main.jpg" alt="cat or something">
            <nav>
                <ul>
                    <li></li>
