--- a/index.html
+++ b/index.html
@@ -1,19 +1,18 @@
 <!--
     Earl Joshua Zalameda
-    WEBD 100
+    WEBD 100 NANI
     Anthony
 -->
 
 <html>
 <head>
-    <title>Hello world</title>
+    <title>Staykat Academy</title>
     <body>
         <div class="box">
            <img src="img/main.jpg" alt="cat or something">
         
             <h1>My Blog</h1>
                 <h3>Chocolate Mint Cookies</h3>
-
 
                 <p>
                     "This is a melt in your mouth chocolate cookie that has a chocolate mint frosting. It's delicious and it's easy!"
@@ -26,6 +25,7 @@
                     Preheat oven to 350 degrees F (175 degrees C).
                     Roll dough into balls and place on ungreased cookie sheet about 2 inches apart. Bake 8-10 minutes. While cookies are baking unwrap mints and divide each in half. When cookies are brought out of the oven, put 1/2 mint on top of each cookie. Let the mint sit for up to 5 minutes until melted, then spread the mint on top of the cookie. Eat and enjoy!
                 </p>
+
         </div>
     </body>
 </head>
