--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Staykat Academy</title>
     <body>
         <div class="box">
-           <img src="main.jpg" alt="cat or something">
+           <img src= "img/eye.PNG" alt="cat or something">
         
             <h1>My Blog</h1>
                 <h3>StrayKat Academy</h3>
