--- a/index.html
+++ b/index.html
@@ -22,3 +22,10 @@
     </body>
 </head>
 </html>
+<form action="">
+ <input type="radio" name="gender" value="male">
+Male<br>
+ <input type="radio" name="gender" value="female">
+Female<br>
+ <input type="radio" name="gender" value="other"> Other
+</form>
