--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
 </head>
 </html>
 <form action="">
- <input type="radio" name="gender" value="League">
+ <input type="radio" name="ToDo" value="League">
 Male<br>
- <input type="radio" name="gender" value="Homework">
+ <input type="radio" name="ToDo" value="Homework">
 Female<br>
- <input type="radio" name="gender" value="Eat food"> Other
+ <input type="radio" name="ToDo" value="Eat food"> Other
 </form>
