--- a/index.html
+++ b/index.html
@@ -29,3 +29,12 @@ Male<br>
 Female<br>
  <input type="radio" name="ToDo" value="Eat food"> Other
 </form>
+<form action="/action_page.php">
+ First name:<br>
+ <input type="text" name="firstname" value="Mickey">
+ <br>
+ Last name:<br>
+ <input type="text" name="lastname" value="Mouse">
+ <br><br>
+ <input type="submit" value="Submit">
+</form>
