--- a/index.html
+++ b/index.html
@@ -22,13 +22,16 @@
     </body>
 </head>
 </html>
-<form action="">
- <input type="radio" name="ToDo" value="League">
-Male<br>
- <input type="radio" name="ToDo" value="Homework">
-Female<br>
- <input type="radio" name="ToDo" value="Eat food"> Other
-</form>
+<form action="/action_page.php">
+<input type="checkbox" name="league1" value="bronze">I'm
+in bronze
+<br>
+<input type="checkbox" name="league2" value="Gold">I'm
+in gold
+<br><br>
+<input type="submit">
+</form> 
+
 <form action="/action_page.php">
  First name:<br>
  <input type="text" name="firstname" value="Mickey">
