--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@ in gold
 
 <form action="/action_page.php">
  First name:<br>
- <input type="text" name="firstname" value="Mickey">
+ <input type="text" name="firstname" value="">
  <br>
  Last name:<br>
- <input type="text" name="lastname" value="Mouse">
+ <input type="text" name="lastname" value="">
  <br><br>
  <input type="submit" value="Submit">
 </form>
