--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <div class="box">
            <img src= "img/229659.jpg" alt="cat or something">
         
-            <h1>My Blog</h1>
+            <h1>Welcome to elo hell!</h1>
                 <h3>StrayKat Academy</h3>
 
                 <p>
