--- a/index.html
+++ b/index.html
@@ -13,31 +13,12 @@
         
             <h1>Welcome to elo hell!</h1>
                 <h3>StrayKat Academy</h3>
-
+                <a href="op.gg">op.gg</a>
                 <p>
-                    things to do eh!
+                    You're elo bracket
                 </p>
 
         </div>
     </body>
 </head>
 </html>
-<form action="/action_page.php">
-<input type="checkbox" name="league1" value="bronze">I'm
-in bronze
-<br>
-<input type="checkbox" name="league2" value="Gold">I'm
-in gold
-<br><br>
-<input type="submit">
-</form> 
-
-<form action="/action_page.php">
- First name:<br>
- <input type="text" name="firstname" value="">
- <br>
- Last name:<br>
- <input type="text" name="lastname" value="">
- <br><br>
- <input type="submit" value="Submit">
-</form>
