--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
             <h1>Welcome to elo hell!</h1>
                 <h3>StrayKat Academy</h3>
-                <a href="op.gg">op.gg</a>
+                <a href="http://na.op.gg/">op.gg</a>
                 <p>
                     You're elo bracket
                 </p>
