--- a/index.html
+++ b/index.html
@@ -1,18 +1,23 @@
-<!--
+<doctype html>
+   <!--
     Earl Joshua Zalameda
     WEBD 100 NANI
     Anthony
 -->
 
 <html>
-<head>
+    <head>
     <title>Staykat Academy</title>
+    </head>
     <body>
         <div class="box">
            <img src= "img/229659.jpg" alt="cat or something">
         
             <h1>Welcome to elo hell!</h1>
-                <h3>StrayKat Academy</h3>
+               <ul>
+                <h2>Straykat Academy</h2>
+                <h3>homepage content</h3>
+                </ul>
                 <a href="http://na.op.gg/">op.gg</a>
                 <p>
                     You're elo bracket
@@ -20,5 +25,4 @@
 
         </div>
     </body>
-</head>
 </html>
