--- a/index.html
+++ b/index.html
@@ -14,11 +14,10 @@
            <img src= "img/229659.jpg" alt="cat or something">
         
             <h1>Welcome to elo hell!</h1>
-               <ul>
                 <h2>Straykat Academy</h2>
                 <h3>homepage content</h3>
-                </ul>
-                <a href="http://na.op.gg/">op.gg</a>
+            <li><a href="http://na.op.gg/">op.gg</a></li>
+            <li><a href="http://www.lolking.net/">lolking.net</a></li>   
                 <p>
                     You're elo bracket
                 </p>
