--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
     <head>
     <title>Staykat Academy</title>
     </head>
+    <link href="styles/main.css"/>
     <body>
         <div class="box">
-           <img src= "img/229659.jpg" alt="cat or something">
         
             <h1>Welcome to elo hell!</h1>
                 <h2>Straykat Academy</h2>
                 <h3>homepage content</h3>
             <li><a href="http://na.op.gg/">op.gg</a></li>
-            <li><a href="http://www.lolking.net/">lolking.net</a></li>   
+            <li><a href="http://www.lolking.net/">lolking.net</a></li>
+               <img src= "img/229659.jpg" alt="cat or something">   
                 <p>
                     You're elo bracket
                 </p>
