--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
     <head>
     <title>Staykat Academy</title>
     </head>
-    <link href="styles/main.css"/>
-    <body>
+    <style type="text/css">
+        body {
+            background: grey;
+        }
+        </style>
         <div class="box">
-        
             <h1>Welcome to elo hell!</h1>
                 <h2>Straykat Academy</h2>
                 <h3>homepage content</h3>
