--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <style type="text/css">
         body {
             background: grey;
+            font-family: arial;
         }
         </style>
         <div class="box">
