--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             background: grey;
             font-family: arial;
         }
+        a {
+            color: aqua;
+        }
         </style>
         <div class="box">
             <h1>Welcome to elo hell!</h1>
