--- a/index.html
+++ b/index.html
@@ -14,8 +14,12 @@
             background: grey;
             font-family: arial;
         }
-        a {
+        a{
             color: aqua;
+         }
+        h1{
+            background: #666;
+            color: white;
         }
         </style>
         <div class="box">
