--- a/index.html
+++ b/index.html
@@ -9,19 +9,7 @@
     <head>
     <title>Staykat Academy</title>
     </head>
-    <style type="text/css">
-        body {
-            background: grey;
-            font-family: arial;
-        }
-        a{
-            color: aqua;
-         }
-        h1{
-            background: #666;
-            color: white;
-        }
-        </style>
+   <link href="css/main.css"/>
         <div class="box">
             <h1>Welcome to elo hell!</h1>
                 <h2>Straykat Academy</h2>
