--- a/index.html
+++ b/index.html
@@ -9,7 +9,20 @@
     <head>
     <title>Staykat Academy</title>
     </head>
-   <link href="css/main.css"/>
+    <style type="text/css">
+        body {
+            background: grey;
+            font-family: arial;
+        }
+        a{
+            color: aqua;
+         }
+        h1{
+            background: #666;
+            color: white;
+            padding: 10px;
+        }
+        </style>
         <div class="box">
             <h1>Welcome to elo hell!</h1>
                 <h2>Straykat Academy</h2>
