--- a/index.html
+++ b/index.html
@@ -22,6 +22,10 @@
             color: white;
             padding: 10px;
         }
+        nav li {
+            display: inline;
+            list-style-type: none;
+        }
         </style>
         <div class="box">
             <h1>Welcome to elo hell!</h1>
