--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             color: white;
             padding: 10px;
         }
-        nav li {
+        nav ul li {
             display: inline;
             list-style-type: none;
         }
@@ -31,9 +31,11 @@
             <h1>Welcome to elo hell!</h1>
                 <h2>Straykat Academy</h2>
                 <h3>homepage content</h3>
+        <ul>        
             <li><a href="http://na.op.gg/">op.gg</a></li>
             <li><a href="http://www.lolking.net/">lolking.net</a></li>
-               <img src= "img/229659.jpg" alt="cat or something">   
+               <img src= "img/229659.jpg" alt="cat or something">  
+        </ul>        
                 <p>
                     You're elo bracket
                 </p>
