--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <title>Staykat Academy</title>
     </head>
     <style type="text/css">
+        header {
+            margin: 0;
+        }
         body {
             background: grey;
             font-family: arial;
@@ -22,7 +25,10 @@
             color: white;
             padding: 10px;
         }
-        nav ul li {
+        ul{ 
+        margin: 0;
+        }
+        ul li {
             display: inline;
             list-style-type: none;
         }
