--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <head>
     <title>Staykat Academy</title>
     </head>
+    <body>
     <style type="text/css">
         h3{
             margin: 0;
@@ -29,6 +30,7 @@
         margin: 0;
         }
         ul li {
+            color: green;
             display: inline;
             list-style-type: none;
         }
@@ -38,10 +40,13 @@
                 <h2>Straykat Academy</h2>
                 <h3>homepage content</h3>
         <ul>        
-            <li><a href="http://na.op.gg/">op.gg</a></li>
-            <li><a href="http://www.lolking.net/">lolking.net</a></li>  
+            <li>Champs</li>
+            <li>Runes</li>
+            <li>Mastery</li>  
         </ul>        
-            <img src= "img/229659.jpg" alt="cat or something">
+                <a href="http://www.lolking.net/">lolking.net</a>
+                <a href="http://na.op.gg/">op.gg</a>
+               <img src= "img/229659.jpg" alt="cat or something">
                 <p>
                     You're elo bracket
                 </p>
