--- a/index.html
+++ b/index.html
@@ -10,31 +10,7 @@
     <title>Staykat Academy</title>
     </head>
     <body>
-    <style type="text/css">
-        h3{
-            margin: 0;
-        }
-        body {
-            background: grey;
-            font-family: arial;
-        }
-        a{
-            color: aqua;
-         }
-        h1{
-            background: #666;
-            color: white;
-            padding: 10px;
-        }
-        ul{ 
-        margin: 0;
-        }
-        ul li {
-            color: green;
-            display: inline;
-            list-style-type: none;
-        }
-        </style>
+   <css src="css/main.css"></css>
         <div class="box">
             <h1>Welcome to elo hell!</h1>
                 <h2>Straykat Academy</h2>
